force-app/main/default/objects/Quality_Monitoring__c/Quality_Monitoring__c.object-meta.xml
<CustomObject>
    <description>Quality Monitoring of NVM phone calls</description>
    <label>Quality Monitoring</label>
    <nameField>
        <displayFormat>QM-{0000000}</displayFormat>
        <label>Quality Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Monitoring</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>