force-app/main/default/objects/Quality_Monitoring__c/fields/Accuracy_Total__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_Accuracy_P1__c, &apos;No&apos;), 0, 2) +
IF( ISPICKVAL(Ans_Accuracy_P2__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Accuracy_P3__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Accuracy_P4__c, &apos;No&apos;), 0, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>