force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ans_Call_Opening_P3__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ans_Call_Opening_P3__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QM_Points</valueSetName>
    </valueSet>
</CustomField>