force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ans_Understand_Confirm_Needs_P1__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ans_Understand_Confirm_Needs_P1__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QM_Points</valueSetName>
    </valueSet>
</CustomField>