force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Accuracy_Q1__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Accuracy_Q1__c</fullName>
    <defaultValue>&quot;Asked if caller will be using insurance.  Entered Insurance information.&quot;</defaultValue>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>