force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Accuracy_Q2__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Accuracy_Q2__c</fullName>
    <defaultValue>&quot;Advises patient that fee is due at the time of service&quot;</defaultValue>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>