force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Accuracy_Q3__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Accuracy_Q3__c</fullName>
    <defaultValue>&quot;Recaps the appointment date/time&quot;</defaultValue>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>