force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Call_Opening_Q1__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Call_Opening_Q1__c</fullName>
    <defaultValue>&quot;Uses standard greeting&quot;</defaultValue>
    <inlineHelpText>-Thank you for calling Advanced Dental Implant Centers, this is   _____.
-How may I assist you?
-May I have your first and last name please?</inlineHelpText>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>