force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Call_Opening_Q2__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Call_Opening_Q2__c</fullName>
    <defaultValue>&quot;Uses an inviting, professional tone of voice to open&quot;</defaultValue>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>