force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Call_Opening_Q3__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Call_Opening_Q3__c</fullName>
    <defaultValue>&quot;Asked for and used patient&apos;s name at 2-3 times throughout the call&quot;</defaultValue>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>