force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Collecting_Q1__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Collecting_Q1__c</fullName>
    <defaultValue>&quot;Offered appointment date and times&quot;</defaultValue>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>