force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Collecting_Q2__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Collecting_Q2__c</fullName>
    <defaultValue>&quot;Overcame Objections&quot;</defaultValue>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>