force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Collecting_Q3__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Collecting_Q3__c</fullName>
    <defaultValue>&quot;Verifies/Confirms all contact information for accuracy.  Repeat spelling of first/last name, address, and services the caller is going in for&quot;</defaultValue>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>