force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Understand_Confirm_Needs_Q1__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Understand_Confirm_Needs_Q1__c</fullName>
    <defaultValue>&quot;Accurately identifies patient needs.&quot;</defaultValue>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>