force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Understand_Confirm_Needs_Q2__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Understand_Confirm_Needs_Q2__c</fullName>
    <defaultValue>&quot;Asks probing questions&quot;</defaultValue>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>