force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Ques_Understand_Confirm_Needs_Q3__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Ques_Understand_Confirm_Needs_Q3__c</fullName>
    <defaultValue>&quot;Confirms that caller&apos;s needs match services offered by the office in question&quot;</defaultValue>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>