force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Total_Call_Opening__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Total_Call_Opening__c</fullName>
    <formula>IF( ISPICKVAL(ADIC_Ans_Call_Opening_P1__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Call_Opening_P2__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Call_Opening_P3__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Call_Opening_P4__c, &apos;No&apos;), 0, 4)</formula>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>