force-app/main/default/objects/Quality_Monitoring__c/fields/ADIC_Total_Understand_Confirm_Needs__c.field-meta.xml
<CustomField>
    <fullName>ADIC_Total_Understand_Confirm_Needs__c</fullName>
    <formula>IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P1__c, &apos;No&apos;), 0, 2) +
IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P2__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P3__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P4__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P5__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(ADIC_Ans_Understand_Confirm_Needs_P6__c, &apos;No&apos;), 0, 6)</formula>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>