force-app/main/default/objects/Quality_Monitoring__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <formula>NVM_Call_Summary__r.NVMStatsSF__Agent__r.NVMContactWorld__NVM_Agent_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Id</label>
    <type>Text</type>
</CustomField>