force-app/main/default/objects/Quality_Monitoring__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <formula>NVM_Call_Summary__r.NVMStatsSF__Agent__r.FirstName + &apos; &apos; +  NVM_Call_Summary__r.NVMStatsSF__Agent__r.LastName</formula>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>