force-app/main/default/objects/Quality_Monitoring__c/fields/Ans_Responding_P2__c.field-meta.xml
<CustomField>
    <fullName>Ans_Responding_P2__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QM_Points</valueSetName>
    </valueSet>
</CustomField>