force-app/main/default/objects/Quality_Monitoring__c/fields/Call_Opening_Total__c.field-meta.xml
<CustomField>
    <fullName>Call_Opening_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_Call_Opening_P1__c, &apos;No&apos;),  0, 2) +
IF( ISPICKVAL(Ans_Call_Opening_P2__c, &apos;No&apos;),  0, 2) +
IF( ISPICKVAL(Ans_Call_Opening_P3__c, &apos;No&apos;),  0, 4) +
IF( ISPICKVAL( Ans_Call_Opening_P4__c , &apos;No&apos;),  0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>