force-app/main/default/objects/Quality_Monitoring__c/fields/ClosingCall_Total__c.field-meta.xml
<CustomField>
    <fullName>ClosingCall_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_ClosingCall_P1__c, &apos;No&apos;), 0, 2) +
IF( ISPICKVAL(Ans_ClosingCall_P2__c, &apos;No&apos;), 0, 2) +
IF( ISPICKVAL(Ans_ClosingCall_P3__c, &apos;No&apos;), 0, 6) +
IF( ISPICKVAL(Ans_ClosingCall_P4__c, &apos;No&apos;), 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>