force-app/main/default/objects/Quality_Monitoring__c/fields/Collecting_Total__c.field-meta.xml
<CustomField>
    <fullName>Collecting_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_Collecting_P1__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Collecting_P2__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Collecting_P3__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Collecting_P4__c, &apos;No&apos;), 0, 4) +
IF( ISPICKVAL(Ans_Collecting_P5__c, &apos;No&apos;), 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>