force-app/main/default/objects/Quality_Monitoring__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Observe AI&quot;,
    BLANKVALUE(Observe_Final_Score__c, 0),
    IF(
        RecordType.Name = &quot;ADIC&quot;,
        BLANKVALUE(ADIC_Total_Call_Opening__c, 0) +
        BLANKVALUE(ADIC_Total_Understand_Confirm_Needs__c, 0) +
        BLANKVALUE(ADIC_Total_Collecting__c, 0) +
        BLANKVALUE(ADIC_Total_Accuracy__c, 0),
        BLANKVALUE(Call_Opening_Total__c, 0) +
        BLANKVALUE(Understand_Confirm_Needs_Total__c, 0) +
        BLANKVALUE(Social_Promo_Total__c, 0) +
        BLANKVALUE(Responding_Total__c, 0) +
        BLANKVALUE(Collecting_Total__c, 0) +
        BLANKVALUE(Accuracy_Total__c, 0) +
        BLANKVALUE(ClosingCall_Total__c, 0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>