force-app/main/default/objects/Quality_Monitoring__c/fields/Notes1__c.field-meta.xml
<CustomField>
    <fullName>Notes1__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>