force-app/main/default/objects/Quality_Monitoring__c/fields/NVM_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>NVM_Call_Summary__c</fullName>
    <label>NVM Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipLabel>Quality Monitoring</relationshipLabel>
    <relationshipName>Quality_Monitoring</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>