force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Observe_Agent_Id__c</fullName>
    <label>Observe Agent Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>