force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Created__c.field-meta.xml
<CustomField>
    <fullName>Observe_Created__c</fullName>
    <label>Observe Created</label>
    <type>DateTime</type>
</CustomField>