force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observe_Evaluation_Type__c</fullName>
    <label>Observe Evaluation Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>