force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Observe_Final_Score__c</fullName>
    <label>Observe Final Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>