force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Observe_Form_Name__c</fullName>
    <label>Observe Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>