force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Id__c.field-meta.xml
<CustomField>
    <fullName>Observe_Id__c</fullName>
    <externalId>true</externalId>
    <label>Observe Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>