force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Link__c.field-meta.xml
<CustomField>
    <fullName>Observe_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://app.observe.ai/call/&quot; +  Observe_Id__c , &quot;Observe AI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observe Link</label>
    <type>Text</type>
</CustomField>