force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Modified__c.field-meta.xml
<CustomField>
    <fullName>Observe_Modified__c</fullName>
    <label>Observe Modified</label>
    <type>DateTime</type>
</CustomField>