force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Percent_Score__c.field-meta.xml
<CustomField>
    <fullName>Observe_Percent_Score__c</fullName>
    <label>Observe Percent Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>