force-app/main/default/objects/Quality_Monitoring__c/fields/Observe_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Observe_Total_Points__c</fullName>
    <label>Observe Total Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>