force-app/main/default/objects/Quality_Monitoring__c/fields/QM_Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>QM_Total_Percentage__c</fullName>
    <formula>QM_Total_Points__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QM Total %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>