force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Accuracy_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_Accuracy_Q3__c</fullName>
    <defaultValue>&quot;Asked if caller will be using insurance if red flag is present.  Entered insurance intake information&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>