force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Call_Opening_Q1__c.field-meta.xml
<CustomField>
    <fullName>Ques_Call_Opening_Q1__c</fullName>
    <defaultValue>&quot;Uses standard greeting&quot;</defaultValue>
    <inlineHelpText>Thank you for calling Affordable Dentures and Implants, this is ____ .
- How may I assist you?
- May I have your first and last name please?</inlineHelpText>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>