force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Call_Opening_Q2__c.field-meta.xml
<CustomField>
    <fullName>Ques_Call_Opening_Q2__c</fullName>
    <defaultValue>&quot;Uses an inviting, professional tone of voice to open&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>