force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Call_Opening_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_Call_Opening_Q3__c</fullName>
    <defaultValue>&quot;Asked for and used patient&apos;s name throughout the call&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <inlineHelpText>Always address by Mr. / Ms. And last name. If last name is too difficult to pronounce, ask for permission to use first name.
Example: May I call you William?</inlineHelpText>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>