force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_ClosingCall_Q1__c.field-meta.xml
<CustomField>
    <fullName>Ques_ClosingCall_Q1__c</fullName>
    <defaultValue>&quot;Prompts the caller for additional needs&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>