force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_ClosingCall_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_ClosingCall_Q3__c</fullName>
    <defaultValue>&quot;Professionalism and proper terminology used throughout the call&quot;</defaultValue>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>