force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Collecting_Q1__c.field-meta.xml
<CustomField>
    <fullName>Ques_Collecting_Q1__c</fullName>
    <defaultValue>&quot;Verifies / updates all contact&apos;s information or creates new patient record&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>