force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Collecting_Q2__c.field-meta.xml
<CustomField>
    <fullName>Ques_Collecting_Q2__c</fullName>
    <defaultValue>&quot;Asked for and entered email address&quot;</defaultValue>
    <inlineHelpText>Example: Which Email Address would you like your appointment confirmation sent to?</inlineHelpText>
    <label>Q2</label>
    <type>TextArea</type>
</CustomField>