force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Collecting_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_Collecting_Q3__c</fullName>
    <defaultValue>&quot;Uses active listening skills&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>