force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Responding_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_Responding_Q3__c</fullName>
    <defaultValue>&quot;Take appropriate actions and make suggestions&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <inlineHelpText>- Did you offer the correct appointment type?
- Did you submit the most appropriate case type?</inlineHelpText>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>