force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Social_Promo_Q1__c.field-meta.xml
<CustomField>
    <fullName>Ques_Social_Promo_Q1__c</fullName>
    <defaultValue>&quot;Provide context that furthers the sales or service call&quot;</defaultValue>
    <inlineHelpText>&quot;Ms. Smith, I am glad you called us today. Dr. Johnson is offering a 20% discount on all services.  Let&apos;s get you
scheduled.&quot;</inlineHelpText>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>