force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Understand_Confirm_Needs_Q1__c.field-meta.xml
<CustomField>
    <fullName>Ques_Understand_Confirm_Needs_Q1__c</fullName>
    <defaultValue>&quot;Accurately identifies caller’s need&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q1</label>
    <type>TextArea</type>
</CustomField>